<resources>
    <!-- Application's name -->
    <string name="app_name">The Maquereau</string>
    <!-- Toolbar -->
    <string name="basket">Panier</string>
    <!-- Home -->
    <string name="find_us">Nous trouver</string>
    <!-- Find us activity -->
    <string name="find_us_title">Nous Contacter</string>
    <!-- Display Menu Items Activity Titles -->
    <string name="entree_title">Nos Entrées</string>
    <string name="plats_title">Nos Plats</string>
    <string name="deserts_title">Nos Desserts</string>
    <string name="ours">Nos</string>
    <!-- Home menu items title -->
    <string name="entree_menu_item">Entrées</string>
    <string name="plats_menu_item">Plats</string>
    <string name="deserts_menu_item">Desserts</string>
    <!-- Item Adapter -->
    <string name="known_as">Known as: </string>
    <string name="dish_name_default">La Bouille à baisse la plus longue du monde mais vraiment</string>
    <string name="dish_name_en_default">The Fish Soup the longest in the world but really</string>
    <string name="from_price">À partir de</string>
    <string name="euros">€</string>
    <!-- Dish Details -->
    <string name="ingredients">eau, rougets, thon rouge, crabes, sel, épices pimentés TIPIAK, gingembre</string>
    <string name="total">Total</string>
    <string name="order_x">X</string>
    <string name="order">Commander</string>
    <string name="order_saved">Commande sauvegardée</string>
    <!-- Descriptions -->
    <string name="logo_description">Logo principale</string>
    <string name="entree_description">Voir nos Entrées</string>
    <string name="plats_description">Voir nos Plats</string>
    <string name="deserts_description">Voir nos Deserts</string>
    <string name="divider_description">Diviseur</string>
    <!-- Basket -->
    <string name="total2">Total :</string>
    <string name="quantity_text">Quantity :</string>
    <string name="dish_description">Image du plat</string>
    <string name="final_order">Finaliser la commande</string>
    <!-- Sign In -->
    <string name="title_sign_in">Se connecter</string>
    <string name="remind_me">Rester connecté</string>
    <!-- Sign Up -->
    <string name="title_sign_up">Créer un compte</string>
    <string name="submit_sign_up">Créer</string>
    <string name="submit_sign_in">Se connecter</string>
    <string name="label_name">Votre nom</string>
    <string name="label_lastname">Votre prénom</string>
    <string name="label_address">Votre adresse</string>
    <string name="label_email">Votre email</string>
    <string name="no_account">Je n\'ai pas de compte</string>
    <string name="have_account">J\'ai déja un compte</string>
    <string name="label_password">Votre mot de passe</string>
    <string name="error_email_non_valid">L\'email n\'est pas valide !</string>
    <string name="error_empty">Ne peux pas être vide !</string>
    <string name="error_exist">Ce champ existe déja !</string>
    <string name="error_at_least_one_number">Doit contenir au moins un nombre !</string>
    <string name="error_at_least_one_uppercase">Doit contenir au moins une lettre en majuscule !</string>
    <string name="error_length_prefix">Doit contenir </string>
    <string name="error_length_suffix"> lettres !</string>
    <string name="error_at_least_one_special">Doit contenir au moins une lettre spécial !</string>
    <!-- Menu -->
    <string name="action_log_in">Se connecter</string>
    <string name="action_log_out">Se déconnecter</string>
    <string name="action_my_previous_orders">Mes commandes passées</string>
    <!-- History Order Card -->
    <string name="price_total">Pour un total de</string>
    <string name="vendor">Chez</string>
    <string name="date_label">le</string>
    <!-- Toast -->
    <string name="log_out_success">Déconnection réussite</string>
    <string name="log_in_success">Connection réussite</string>
    <string name="sign_up_success">Inscription réussite</string>
    <string name="sign_up_error">Ce compte ne peut pas être crée, l\'utilisateur existe déja</string>
    <string name="no_orders_found">Aucun plats dans le panier</string>
    <string name="no_number">Aucun nombre !</string>
    <string name="cannot_retrieve_orders">Aucune commandes retrouvées</string>
    <string name="cannot_load_dishes">Les plats ne peuvent pas être chargés</string>
    <string name="received_your_order">a reçu votre commande</string>
    <!-- Shared preferences -->
    <string name="preference_file_key">fr.isen.david.themaquereau.preferences</string>
    <string name="deleted_order">Commande annulée</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>