<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/homeEntreeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/entree_description"
        android:fontFamily="cursive"
        android:text="@string/entree_menu_item"
        android:textAlignment="center"
        android:textColor="@color/main_darker"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeBackground" />

    <TextView
        android:id="@+id/homePlatsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/plats_description"
        android:fontFamily="cursive"
        android:text="@string/plats_menu_item"
        android:textColor="@color/main_darker"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeEntreeButton" />

    <TextView
        android:id="@+id/homeDesertsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/deserts_description"
        android:fontFamily="cursive"
        android:text="@string/deserts_menu_item"
        android:textColor="@color/main_darker"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homePlatsButton" />

    <TextView
        android:id="@+id/signature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:fontFamily="@font/bilbo_swash_caps"
        android:text="@string/signature"
        android:textColor="@color/black"
        android:textSize="22dp"
        android:translationZ="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/homeBackground" />

    <TextView
        android:id="@+id/findUsLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="cursive"
        android:text="@string/find_us"
        android:textColor="@color/link"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/michelinLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeBackground"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/homeBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/homeBackground"
        app:srcCompat="@drawable/title_white"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/michelinLogo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/michelin"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/homeBackground"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:foregroundTintMode="add"
        android:scaleType="centerCrop"
        android:tintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background"
        app:tint="#46000000"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/homeDivider1"
        android:layout_width="170dp"
        android:layout_height="1dp"
        android:background="@color/secondary_variant"
        android:contentDescription="@string/divider_description"
        android:src="@android:drawable/divider_horizontal_dark"
        app:layout_constraintBottom_toTopOf="@+id/homePlatsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeEntreeButton" />

    <ImageView
        android:id="@+id/homeDivider2"
        android:layout_width="170dp"
        android:layout_height="1dp"
        android:background="@color/secondary_variant"
        android:contentDescription="@string/divider_description"
        android:src="@android:drawable/divider_horizontal_dark"
        app:layout_constraintBottom_toTopOf="@+id/homeDesertsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homePlatsButton" />

    <ImageView
        android:id="@+id/homeDivider3"
        android:layout_width="170dp"
        android:layout_height="1dp"
        android:background="@color/secondary_variant"
        android:contentDescription="@string/divider_description"
        android:src="@android:drawable/divider_horizontal_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeDesertsButton" />

</androidx.constraintlayout.widget.ConstraintLayout>