<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:configChanges="keyboardHidden"
    android:focusableInTouchMode="true"
    app:layoutDescription="@xml/activity_dish_details_scene3"
    tools:context=".DishDetailsActivity">

    <TextView
        android:id="@+id/dishDetailName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="cursive"
        android:padding="0dp"
        android:text="@string/dish_name_default"
        android:textAlignment="center"
        android:textColor="@color/main_text"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33999997" />

    <TextView
        android:id="@+id/dishDetailIngredients"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="cursive"
        android:padding="0dp"
        android:text="@string/ingredients"
        android:textAlignment="center"
        android:textColor="@color/main_light"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dishDetailName"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/orderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="cursive"
        android:text="@string/order_x"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fishImageButton"
        app:layout_constraintEnd_toStartOf="@+id/quantity"
        app:layout_constraintStart_toEndOf="@+id/tagImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="51dp"
        android:layout_height="70dp"
        android:layout_marginStart="48dp"
        android:ems="10"
        android:fontFamily="cursive"
        android:inputType="numberSigned"
        android:text="1"
        android:textAlignment="textStart"
        android:textColor="#3E3E3E"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fishImageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tagImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <fragment
        android:id="@+id/dishPagerFragment"
        android:name="fr.isen.david.themaquereau.fragments.DishImagesPagerFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/dishDetailName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dividerDetail"
        android:layout_width="130dp"
        android:layout_height="1dp"
        android:background="@color/main_light"
        app:layout_constraintBottom_toTopOf="@+id/dishDetailIngredients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dishDetailName"
        app:srcCompat="@android:drawable/divider_horizontal_dark" />

    <ImageView
        android:id="@+id/tagImage"
        android:layout_width="170dp"
        android:layout_height="140dp"
        android:layout_marginBottom="25dp"
        android:rotation="168"
        app:layout_constraintBottom_toBottomOf="@+id/fishImageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/tag" />

    <ImageView
        android:id="@+id/fishImageButton"
        android:layout_width="230dp"
        android:layout_height="90dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/orderButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dishDetailIngredients"
        app:layout_constraintVertical_bias="0.85"
        app:srcCompat="@drawable/maquereau_button" />

    <TextView
        android:id="@+id/dishDetailEuros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="cursive"
        android:text="@string/euros"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tagImage"
        app:layout_constraintEnd_toEndOf="@+id/tagImage"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/tagImage"
        app:layout_constraintTop_toTopOf="@+id/tagImage"
        app:layout_constraintVertical_bias="0.647" />

    <TextView
        android:id="@+id/dishDetailPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="12,3"
        android:textColor="@color/secondary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tagImage"
        app:layout_constraintEnd_toEndOf="@+id/tagImage"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toStartOf="@+id/tagImage"
        app:layout_constraintTop_toTopOf="@+id/tagImage"
        app:layout_constraintVertical_bias="0.635" />

    <TextView
        android:id="@+id/disDetailTotal"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/total"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tagImage"
        app:layout_constraintEnd_toEndOf="@+id/tagImage"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintStart_toStartOf="@+id/tagImage"
        app:layout_constraintTop_toTopOf="@+id/tagImage"
        app:layout_constraintVertical_bias="0.301" />

    <Button
        android:id="@+id/orderButton"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>